cargo-features = ["edition2021"]
[package]
name = "project_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }

serde_json = "1.0"
dirs = "4.0.0"
